...
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/space_4"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/btn_primary"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:textColor="@color/on_accent"
                android:textSize="16sp"
                android:textStyle="bold"
...
